fixed: homepage layout bug

--- a/css/_primary-menu.scss
+++ b/css/_primary-menu.scss
@@ -4,7 +4,7 @@
 #masthead{
 	position: sticky;
 	z-index: 9999;
-    top: 100px;
+    top: 80px;
 
     #site-navigation{
         a{
